--- a/LabWebServletJdbc/pom.xml
+++ b/LabWebServletJdbc/pom.xml
@@ -11,20 +11,20 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-version>1.8</java-version>
-        <spring-version>4.3.9.RELEASE</spring-version>
+        <spring-version1>4.3.9.RELEASE</spring-version1>
     </properties>
 
     <dependencies>
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
-		    <version>${spring-version}</version>
+		    <version>${spring-version1}</version>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-orm</artifactId>
-		    <version>${spring-version}</version>
+		    <version>${spring-version1}</version>
 		</dependency>
 	    
 		<dependency>
